--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>VVVVirtual</title>
 </head>
 <body>
-    <h1>vvvvirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
+    <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, post-structuralist philosophy, applications of high school math and computational music etc through the lens of making things with VVVV gamma a reading of Deleuze and Guattari's A thousand Plateaus<br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, post-structuralist philosophy, applications of high school math<br> and computational music etc through the lens of making things with VVVV gamma a reading of Deleuze and Guattari's A thousand Plateaus<br><br>
 
 Why such a broad sweep?<br><br>
 
-For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last point, in my opinion, is extremely dangerous, because it's through mistakes, chances and errors that life on Earth learns and thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly become as people?<br><br>
+For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, <br>but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of <br>true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last<br> point, in my opinion, is extremely dangerous, because it's through mistakes, chances and errors that life on Earth learns and <br>thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse <br>this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly <br>become as people?<br><br>
 
-VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.</p>
+VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. <br>It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.</p>
 </body>
 </html>
