--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, post-structuralist philosophy, applications of high school math<br> and computational music etc through the lens of making things with VVVV gamma a reading of Deleuze and Guattari's A thousand Plateaus<br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, post-structuralist philosophy, applications of high school math<br> and computational music etc through the lens of making things with VVVV gamma as well as a reading of Deleuze and Guattari's <i>A thousand Plateaus</i><br><br>
 
 Why such a broad sweep?<br><br>
 
