--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art <br>, post-structuralist philosophy, applications of high school math and computational music etc.<br>
-We'll be working through the lens of  a Chapter-wise reading of Deleuze and Guattari's <i>A Thousand Plateaus</i> as well as making Glitch art with VVVV gamma<br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralist philosophy, applications of high school math and computational music etc. We'll be working through the lens <br> of  a Chapter-wise reading of Deleuze and Guattari's <i>A Thousand Plateaus</i> as well as making Glitch art with VVVV gamma<br><br>
 
 Why such a broad sweep?<br><br>
 
