--- a/index.html
+++ b/index.html
@@ -9,12 +9,34 @@
     <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralist philosophy, applications of high school math and computational music etc. We'll be working through the lens <br> of  a Chapter-wise reading of Deleuze and Guattari's <i>A Thousand Plateaus</i> as well as making Glitch art with VVVV gamma<br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralist philosophy, applications of high school math and computational music etc. We'll be working through the lens <br> of  a Chapter-wise reading of Deleuze and Guattari's <i>A Thousand Plateaus</i> as well as making Glitch art with VVVV gamma.<br><br>
 
 Why such a broad sweep?<br><br>
 
 For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, <br>but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of <br>true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last<br> point, in my opinion, is extremely dangerous, because it's through mistakes, chances and errors that life on Earth learns and <br>thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse <br>this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly <br>become as people?<br><br>
 
-VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. <br>It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.</p>
+VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. <br>It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.<br> I use VVVV simply because it's a quick and easy way to teach adolescents CS and New Media art without the back and forth of regular languages</p>
+<br><br>
+
+<h3>Table of Contents</h3>
+<ul>
+            <li><a href="#getting-started">Getting Started</a></li>
+            <li><a href="#usage">Course Structure</a></li>
+            <li><a href="#examples">Chapter 1, Wolfpacks</a></li>
+            <li><a href="#examples">Chapter 2, Seismic Sense</a></li>
+            <li><a href="#examples">Chapter 3, Minor Threat</a></li>
+            <li><a href="#examples">Chapter 4, Palantir</a></li>
+`           <li><a href="#examples">Chapter 5, Skinwalking</a></li>
+            <li><a href="#examples">Chapter 6, Icon of Sin</a></li>
+            <li><a href="#examples">Chapter 7, Searching for the Stone</a></li>
+            <li><a href="#examples">Chapter 8, Summoning the Demon </a> </li>
+            <li><a href="#examples">Chapter 9, Third Eye Awakening</a></li>
+            <li><a href="#examples">Chapter 10, Alien Earworms</a></li>
+            <li><a href="#examples">Chapter 11, Koryonic Vajrayana </a></li>
+            <li><a href="#examples">Chapter 12, Jacked in </a></li>
+            <li><a href="#examples">Chapter 13, WarGame </a></li>
+            <li><a href="#examples">Chapter 14, The Path is a network </a></li>
+            <li><a href="#conclusion">Conclusion: Machinic enlightenment </a> </li>
+</ul>
 </body>
 </html>
