--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ VVVV gamma is the primary means through which I'll be taking this course, so I'd
 <ul>
             <li><a href="#getting-started">Getting Started</a></li>
             <li><a href="#usage">Course Structure</a></li>
-            <li><a href="#examples">Chapter 1, Wolfpacks</a></li>
+            <li><a href="#examples">Chapter 1, Wolfpack</a></li>
             <li><a href="#examples">Chapter 2, Seismic Sense</a></li>
             <li><a href="#examples">Chapter 3, Minor Threat</a></li>
             <li><a href="#examples">Chapter 4, Palantir</a></li>
