--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ VVVV gamma is the primary means through which I'll be taking this course, so I'd
 `           <li><a href="#examples">Chapter 5, Skinwalking</a></li>
             <li><a href="#examples">Chapter 6, Icon of Sin</a></li>
             <li><a href="#examples">Chapter 7, Searching for the Stone</a></li>
-            <li><a href="#examples">Chapter 8, Summoning the Demon </a> </li>
+            <li><a href="#examples">Chapter 8, Demon Chant </a></li>
             <li><a href="#examples">Chapter 9, Third Eye Awakening</a></li>
             <li><a href="#examples">Chapter 10, Alien Earworms</a></li>
             <li><a href="#examples">Chapter 11, Koryonic Vajrayana </a></li>
