--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ VVVV gamma is the primary means through which I'll be taking this course, so I'd
             <li><a href="#examples">Chapter 2, Seismic Sense</a></li>
             <li><a href="#examples">Chapter 3, Minor Threat</a></li>
             <li><a href="#examples">Chapter 4, Palantir</a></li>
-`           <li><a href="#examples">Chapter 5, Skinwalking</a></li>
+           <li><a href="#examples">Chapter 5, Skinwalking</a></li>
             <li><a href="#examples">Chapter 6, Icon of Sin</a></li>
             <li><a href="#examples">Chapter 7, Searching for the Stone</a></li>
             <li><a href="#examples">Chapter 8, Demon Chant </a></li>
