--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <title>VVVVirtual</title>
 </head>
 <body>
-    <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error</h1>
+    <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error </h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post- computational music etc. We'll be working through the lens  of  a Chapter-wise reading of Deleuze and Guattari's<br><i>A Thousand      Plateaus</i> as well as making glitch art and music using VVVV Gamma with a little bit of PureData <br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralism, philosophy, computational music etc. We'll be working through the lens  of  a Chapter-wise reading of Deleuze and Guattari's<br><i>A Thousand      Plateaus</i> as well as making glitch art and music using VVVV Gamma with a little bit of help from PureData <br><br>
 
 Why such a broad sweep?<br><br>
 
 For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, <br>but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of <br>true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last<br> point, in my opinion, is extremely dangerous, because it's through mistakes, chances and errors that life on Earth learns and <br>thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse <br>this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly <br>become as people?<br><br>
 
-VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. <br>It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.<br> I use VVVV simply because it's a quick and easy way to teach adolescents CS and New Media art without the back and forth of regular languages</p>
+VVVV gamma is the primary means through which I'll be taking this course, so I'd recommend getting that installed. <br>It would also help to take chkworks' VVVV course "The Bigbang" to navigate the software better, but that's up to you.<br> I use VVVV simply because it's a quick and easy way to teach adolescents CS and New Media art without the back and forth of regular languages <br><br>
 
+Who is this course meant for? <br><br>
+
+Well, I've taken a leaf out of D&G's book and have made this course for teenagers in Highschool. This is not meant <br> to be a 
+highly technical course (except in sections clearly labelled 'advanced') but is to help you get a group on the technical foundations<br> to makeyour own glitch art in VVVV, understand Deleuze and Guattari's project in these <br> trying times and to help you create your own concepts and love the joy of learning. <br> I'll be using a lot of basic high-school math to explain these concepts so this can also be considered <br> a soft intro to CS and Math as well for people that struggle with it :)
+</p>
 <h3>Table of Contents</h3>
 <ul>
             <li><a href="#getting-started">Getting Started</a></li>
