--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ I use VVVV simply because it's a quick and easy way to prototype generative art 
 Who is this course meant for? <br><br>
 
 Well, I've taken a leaf out of D&G's book and have made this course for teenagers in Highschool. This is not meant to be a <br> 
-highly technical course (except in sections clearly labelled 'advanced')  but is instead meant to help you get a group on the technical foundations to <br> make your own glitch art in VVVV, understand Deleuze and Guattari's project in these trying times and to help you create your own <br> concepts and love the joy of learning. I'll be using a lot of basic high-school math to explain these concepts so this can also be considered <br> a soft intro to CS and Math as well for people that struggle with it :)
+highly technical course (except in sections clearly labelled 'advanced')  but is instead meant to help you get a grip on the technical foundations to <br> make your own glitch art in VVVV, understand Deleuze and Guattari's project in these trying times and to help you create your own <br> concepts and love the joy of learning. I'll be using a lot of basic high-school math to explain these concepts so this can also be considered <br> a soft intro to CS and Math as well for people that struggle with it :)
 </p>
 <h3>Table of Contents</h3>
 <ul>
