--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Why such a broad sweep?<br><br>
 
 For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, <br>but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of <br>true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last<br> point, in my opinion, is <b>extremely dangerous</b>, because it's through mistakes, chances and errors that life on Earth learns and <br>thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse <br>this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly <br>become as people?<br><br>
 
-I use VVVV simply because it's a quick and easy way to prototype generative art without the back and forth of regular languages like P5.JS <br>, while also providing stronger foundations than frameworks like Touchdesigner, Tooll3 or Unreal Engine. <br> VVVV also has many benefits like multi-threading, standalone exe and linux distributions allowing us to run sketches on Raspberry Pi's.<br><br>
+I use VVVV simply because it's a quick and easy way to prototype generative art without the back and forth of regular languages like P5.JS <br>, while also providing stronger foundations than frameworks like Touchdesigner, Tooll3 or Unreal Engine. <br> VVVV also has many benefits like multi-threading, standalone exe and linux distributions allowing us to run sketches on devices like the Raspberry Pi.<br><br>
 
 Who is this course meant for? <br><br>
 
@@ -42,5 +42,6 @@ highly technical course (except in sections clearly labelled 'advanced')  but is
             <li><a href="#examples">Chapter 14, The Path is a network </a></li>
             <li><a href="#conclusion">Conclusion: Machinic enlightenment </a> </li>
 </ul>
+<br><br>
 </body>
 </html>
