--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ Why such a broad sweep?<br><br>
 
 For a lot of people, school as an institution has become a place dedicated to, in my opinion, not the production of good sensibility, <br>but absolute stupidity, due to its insistence of adherence to rules, regulations and authority, all aspects antithetical to the ideal of <br>true creative ability. Thus, most people come out of school feeling like they're stupid, talentless and afraid of mistakes. This last<br> point, in my opinion, is <b>extremely dangerous</b>, because it's through mistakes, chances and errors that life on Earth learns and <br>thus evolves. A society that doesn't stray, cannot grow. Deleuze, Chaos theory and Glitch art are three domains that I belive espouse <br>this approach to life in the most beautiful manner, for if we don't take a chance at life, how can we know what we could ever truly <br>become as people?<br><br>
 
-I use VVVV simply because it's a quick and easy way to prototype generative art without the back and forth of regular languages like P5.JS <br>, while also providing stronger foundations than frameworks like Touchdesigner, Tooll3 or Unreal Engine. <br> VVVV also has many benefits like multi-threading, standalone exe and linux distributions allowing us to run sketches on devices like the Raspberry Pi.<br><br>
+I use VVVV simply because it's a quick and easy way to prototype generative art without the back and forth of regular languages like P5.JS <br>, while also providing stronger foundations than frameworks like Touchdesigner, Tooll3 or Unreal Engine.  VVVV also has many benefits<br> like multi-threading, standalone application export and linux distributions, allowing us to run sketches on devices like the Raspberry Pi.<br><br>
 
 Who is this course meant for? <br><br>
 
-Well, I've taken a leaf out of D&G's book and have made this course for teenagers in Highschool. This is not meant to be a <br> 
-highly technical course (except in sections clearly labelled 'advanced')  but is instead meant to help you get a grip on the technical foundations to <br> make your own glitch art in VVVV, understand Deleuze and Guattari's project in these trying times and to help you create your own <br> concepts and love the joy of learning. I'll be using a lot of basic high-school math to explain these concepts so this can also be considered <br> a soft intro to CS and Math as well for people that struggle with it :)
+Well, I've taken a leaf out of D&G's book and have made this course for adolescents in highschool. This is not meant to be a <br> 
+highly technical course (except in sections clearly labelled 'advanced')  but is instead meant to help you get a grip on the technical foundations to <br> make your own glitch art in VVVV, understand Deleuze and Guattari's <i>Capitalism and Schizophrenia </i> project in these trying times and <br>to help you create your own  concepts in order to fall in love with the joy of learning. I'll be using a lot of basic high-school math to explain these concepts <br> so this can also be considered a soft intro to CS and Math as well for people that struggle with it :)
 </p>
 <h3>Table of Contents</h3>
 <ul>
