--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@ highly technical course (except in sections clearly labelled 'advanced')  but is
 <ul>
             <li><a href="#getting-started">Getting Started</a></li>
             <li><a href="#usage">Course Structure</a></li>
-            <li><a href="#examples">Chapter 1, Wolfpack</a></li>
-            <li><a href="#examples">Chapter 2, Seismic Sense</a></li>
-            <li><a href="#examples">Chapter 3, Minor Threat</a></li>
-            <li><a href="#examples">Chapter 4, Palantir</a></li>
-           <li><a href="#examples">Chapter 5, Skinwalking</a></li>
-            <li><a href="#examples">Chapter 6, Icon of Sin</a></li>
-            <li><a href="#examples">Chapter 7, Searching for the Stone</a></li>
-            <li><a href="#examples">Chapter 8, Demon Chant </a></li>
-            <li><a href="#examples">Chapter 9, Third Eye Awakening</a></li>
-            <li><a href="#examples">Chapter 10, Alien Earworms</a></li>
-            <li><a href="#examples">Chapter 11, Koryonic Vajrayana </a></li>
-            <li><a href="#examples">Chapter 12, Jacked in </a></li>
-            <li><a href="#examples">Chapter 13, WarGame </a></li>
-            <li><a href="#examples">Chapter 14, The Path is a network </a></li>
-            <li><a href="#conclusion">Conclusion: Machinic enlightenment </a> </li>
+            <li><a href="#examples">Chapter 1, Wolfpack: Set theory, Variable Types and the Idea of Order</a></li>
+            <li><a href="#examples">Chapter 2, Seismic Structure: Relational maps, tables and the Emergence of Strata </a></li>
+            <li><a href="#examples">Chapter 3, Minor Threat: Functions, Iterations and Marginal evolution  </a></li>
+            <li><a href="#examples">Chapter 4, Palantir: Inductive reasoning, Operations and Eye-Power</a></li>
+           <li><a href="#examples">Chapter 5, Skinwalking: Geometrical Bodies, Object Polymorphism and Mediated Morphogenesis </a></li>
+            <li><a href="#examples">Chapter 6, Icon of Sin: Equations, Interfaces and Small Worlds </a></li>
+            <li><a href="#examples">Chapter 7, Searching for the Stone: Limits and Differentials, Scope of Parameters and system transitions</a></li>
+            <li><a href="#examples">Chapter 8, Demon Chant: Derivatives and Integration, Inheirited forces and Maxwell revisited </a></li>
+            <li><a href="#examples">Chapter 9, Third Eye Awakening: Permute/Combine, machine sensing and the nature of information </a></li>
+            <li><a href="#examples">Chapter 10, Alien Earworms: Sequences, State Machines and Cosmic Refrains </a></li>
+            <li><a href="#examples">Chapter 11, Vajrayana: Statistical control , Exception Handling and Barbarian terror </a></li>
+            <li><a href="#examples">Chapter 12, Jacked in: Probability, Unforseen Events and the origins of the State  </a></li>
+            <li><a href="#examples">Chapter 13, War Games: Vectors, Play, and Battle Strategy</a></li>
+            <li><a href="#examples">Chapter 14, New World Order: Matrices, Modules and breaking outside the Cave </a></li>
+            <li><a href="#conclusion">Conclusion: Path of Machinic enlightenment </a> </li>
 </ul>
 <br><br>
 </body>
