--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ highly technical course (except in sections clearly labelled 'advanced')  but is
             <li><a href="#examples">Chapter 2, Seismic Structure: Relational maps, tables and the Emergence of Strata </a></li>
             <li><a href="#examples">Chapter 3, Minor Threat: Functions, Iterations and Marginal evolution  </a></li>
             <li><a href="#examples">Chapter 4, Palantir: Inductive reasoning, Operations and Eye-Power</a></li>
-           <li><a href="#examples">Chapter 5, Skinwalking: Geometrical Bodies, Object Polymorphism and Mediated Morphogenesis </a></li>
+           <li><a href="#examples">Chapter 5, Skinwalking: Geometrical Bodies, Polymorphism and Mediated Morphogenesis </a></li>
             <li><a href="#examples">Chapter 6, Icon of Sin: Equations, Interfaces and Small Worlds </a></li>
             <li><a href="#examples">Chapter 7, Searching for the Stone: Limits and Differentials, Scope of Parameters and system transitions</a></li>
             <li><a href="#examples">Chapter 8, Demon Chant: Derivatives and Integration, Inheirited forces and Maxwell revisited </a></li>
             <li><a href="#examples">Chapter 9, Third Eye Awakening: Permute/Combine, machine sensing and the nature of information </a></li>
-            <li><a href="#examples">Chapter 10, Alien Earworms: Sequences, State Machines and Cosmic Refrains </a></li>
-            <li><a href="#examples">Chapter 11, Vajrayana: Statistical control , Exception Handling and Barbarian terror </a></li>
+            <li><a href="#examples">Chapter 10, Alien Earworms: Sequential serialization, State Machines and Cosmic music </a></li>
+            <li><a href="#examples">Chapter 11, Vajrayana: Statistical control , Exception Handling and Barbarian t(error) </a></li>
             <li><a href="#examples">Chapter 12, Jacked in: Probability, Unforseen Events and the origins of the State  </a></li>
             <li><a href="#examples">Chapter 13, War Games: Vectors, Play, and Battle Strategy</a></li>
             <li><a href="#examples">Chapter 14, New World Order: Matrices, Modules and breaking outside the Cave </a></li>
