--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ highly technical course (except in sections clearly labelled 'advanced')  but is
             <li><a href="#examples">Chapter 8, Demon Chant: Derivatives and Integration, Inheirited forces and Maxwell revisited </a></li>
             <li><a href="#examples">Chapter 9, Third Eye Awakening: Permute/Combine, machine sensing and the nature of information </a></li>
             <li><a href="#examples">Chapter 10, Alien Earworms: Sequential serialization, State Machines and Cosmic music </a></li>
-            <li><a href="#examples">Chapter 11, Vajrayana: Statistical control , Exception Handling and Barbarian t(error) </a></li>
+            <li><a href="#examples">Chapter 11, Vajrayana: Statistical control , Assembling modules and Barbarian t(error) </a></li>
             <li><a href="#examples">Chapter 12, Jacked in: Probability, Unforseen Events and the origins of the State  </a></li>
             <li><a href="#examples">Chapter 13, War Games: Vectors, Play, and Battle Strategy</a></li>
-            <li><a href="#examples">Chapter 14, New World Order: Matrices, Modules and breaking outside the Cave </a></li>
+            <li><a href="#examples">Chapter 14, New World Order: Matrices, Exceptions and breaking outside the Cave </a></li>
             <li><a href="#conclusion">Conclusion: Path of Machinic enlightenment </a> </li>
 </ul>
 <br><br>
