--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>VVVVirtual: The Art and Philosophy of Chaos, Chance and Computational Error </h1>
     <p>Hello Everyone! Ed here, the creator of the vvvvirtual course (pronounced 'v4virtual' pun intended).<br><br>
 
-This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralism, philosophy, computational music etc. We'll be working through the lens  of  a Chapter-wise reading of Deleuze and Guattari's<br><i>A Thousand      Plateaus</i> as well as making glitch art and music using VVVV Gamma with a little bit of help from PureData <br><br>
+This course is meant to provide an introduction to many topics at once, including but not limited to complexity, new media art, <br> post-structuralism, philosophy, computational music etc. We'll be working through the lens  of  a Chapter-wise reading of Deleuze and Guattari's<br><i>A Thousand      Plateaus</i> as well as making glitch art and music using VVVV Gamma and PlugData <br><br>
 
 Why such a broad sweep?<br><br>
 
